# Ejercicios-para-Nociones-Clave-Gabriel-Kaakedjian

./: .gitignore  CMakeLists.txt  README.md
Parte1/: Persona.cpp  main.cpp
Parte2/: funciones.cpp  funciones.h  main.cpp  matematicas.cpp  nuevo.cpp
